--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <script type="text/javascript" src="jquery.console.js"></script>
         <script src="out/goog/base.js"></script>
         <script src="out/cljs_deps.js"></script>
-        <script src="/require.js"></script>
-        <script type="text/javascript" src="/index.js"></script>
+        <script src="require.js"></script>
+        <script type="text/javascript" src="index.js"></script>
     </body>
 </html>
