improved output handling

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         </style>
     </head>
     <body>
+        <div id="test"></div>
         <script type="text/javascript" src="jquery-2.1.1.min.js"></script>
         <script type="text/javascript" src="jquery.console.js"></script>
         <script src="out/goog/base.js"></script>
