injection finally working properly

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
         <div id="test"></div>
         <script type="text/javascript" src="jquery-2.1.1.min.js"></script>
         <script type="text/javascript" src="jquery.console.js"></script>
-<!--        <script src="out/goog/base.js"></script>
+        <script src="out/goog/base.js"></script>
         <script src="out/cljs_deps.js"></script>
-        <script src="require.js"></script> -->
-        <script src="out/self_compile.js"></script>
+        <script src="require.js"></script>
+<!--        <script src="out/self_compile.js"></script> -->
         <script type="text/javascript" src="index.js"></script>
     </body>
 </html>
