--- a/index.html
+++ b/index.html
@@ -32,10 +32,14 @@
         </div>
         <script type="text/javascript" src="jquery-2.1.1.min.js"></script>
         <script type="text/javascript" src="jquery.console.js"></script>
-        <script src="out/goog/base.js"></script>
+<!--        <script src="out/goog/base.js"></script>
         <script src="out/cljs_deps.js"></script>
-        <script src="require.js"></script>
-<!--         <script src="out/self_compile.js"></script> -->
+        <script src="require.js"></script> -->
+        <script src="out/self_compile.js"></script>
+        <div>
+            <input type="checkbox" id="cb"> Block CSP
+        </div>
+        <div id="repl" class="console"></div>
         <script type="text/javascript" src="index.js"></script>
     </body>
 </html>
